hphp/hack/test/typecheck/lambda/map_lambda_bad_pos.php.exp
File "map_lambda_bad_pos.php", line 6, characters 23-46:
Invalid argument (Typing[4110])
File "map_lambda_bad_pos.php", line 6, characters 24-26:
This is an int
File "map_lambda_bad_pos.php", line 4, characters 19-24:
It is incompatible with a string
File "collections/Map.hhi", line 229, characters 64-65:
  via this generic Tk
